--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
     "vuex-persist": "^3.1.3"
   },
   "devDependencies": {
+    "@types/imapflow": "^1.0.1",
+    "@types/pino": "^6.3.11",
+    "@types/uuid": "^8.3.1",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
